# pidrone_pkg

./: .gitignore  Battery_Holder_Side_1.STL  Battery_Holder_Side_2.STL  CHANGES  CMakeLists.txt  Dockerfile  PiMount V2.stl  PiMount_V3.stl  README  README.md  Rakefile  VERSION  aarons_pi.screenrc  ba.screenrc  base.screenrc  blinkpowerled.sh  bump-version.sh  configure_network_managed.sh  connect_to_rlab.py  docker_run.bash  mocap_rviz_config.rviz  package.xml  pi.screenrc  release_instructions  setup.sh  setup1.sh  setup_for_managed_mode.sh  setup_for_master_mode.sh  start_pidrone_code.sh  tmux_tiled.sh  tmux_windows.sh
documentation/: Cleanflight.md  cleanflight_2.1.0_NAZE.hex
flight_code/: camera_node.py  flow_class.py  hub.py  infrared_node.py  pid_class.py  skyline_class.py
launch/: ekf_localization.launch  raspicam_node.launch  throttle.launch  web.launch
mdp/: arg2id.npy  arg_model_saved.pt  draggn_dataset.py  drone_MDP.py  drone_class.py  i_draggn.py  load_drone_draggn.py  main.py  prog2id.npy  prog_model_saved.pt  word2id.npy
msg/: .RC.msg.swp  Angle.msg  Battery.msg  ERR.msg  FC_command.msg  Flow.msg  Mode.msg  ModeStamped.msg  OpticalFlow.msg  PID.msg  PIDStamped.msg  Phase.msg  RC.msg  State.msg  StateGroundTruth.msg  UkfStats.msg  Velocity.msg  axes_err.msg  pwm.msg
networking/: connect_to_user_wifi.py  connect_to_user_wifi.sh  generate_wpa_supplicant_conf.sh  wpa_supplicant.conf.template
params/: localization.yaml  multiwii.yaml  picamera.yaml  pid.yaml  shutdown_strings.yaml  thresholds.yaml
scripts/: .key_flight.py.swp  .pyMultiwii.py.swp  \  (+166 more)
(+178 files in other folders)
